--- a/src/lib/react-datasheet.css
+++ b/src/lib/react-datasheet.css
@@ -99,7 +99,7 @@ table.data-grid {
 
   box-shadow: 0px 0px 6px #CCC; 
   margin: auto;
-  width: 500px;
+  width: 600px;
   margin-top: 20px;
   transition: box-shadow 0.5s ease-in;
 }
@@ -120,34 +120,7 @@ div.divider {
   width: 100%;
   background-color: #EEE;
 }
-pre {
-      display: inline-block;
-    background: #333;
-    padding: 10px 30px;
-    border-left: 2px solid white;
-}
-.header {
-  text-align: center;
-  padding: 50px 0px;
-  background: #e63946;
-  color: #EEE;
-  margin-bottom: 50px;
-}
-.footer-container a {
-  color: white;
-}
-.footer-container {
-  margin-top: 50px;
-  text-align: center;
-    padding: 50px 0px;
-    background: #e63946;
-    color: #EEE;
-}
-.add-grocery {
-  text-align: left;
-  padding: 5px 10px;
-  color: #888;
-}
+
 .add-button {
   float: right;
     border-radius: 0;
@@ -161,17 +134,6 @@ pre {
 }
 .add-button:hover {
   background: #f17d86;
-}
-.github-link {
-  display: block;
-  width: 200px;
-  font-size: 12px;
-  text-decoration: none;
-  margin: auto;
-  color: white;
-}
-.github-link:hover {
-  color: #DDD;
 }
 
 span.data-grid-container, span.data-grid-container:focus {
@@ -209,7 +171,7 @@ span.data-grid-container, span.data-grid-container:focus {
 
 .data-grid-container .data-grid .cell.read-only {
   background: whitesmoke;
-  color: #999;
+  color: #999 bold;
   text-align: center;
 }
 
